2006-07-31  Brian Warner  <warner@lothar.com>

	* docs/buildbot.texinfo (System Architecture): Finally add lots of
	diagrams to describe how the whole system fits together. The
	images themselves are kept in SVG files, with ascii-art versions
	in corresponding .txt files. Texinfo knows how to interpolate the
	text version into .info files, reference the .png versions from
	.html files, and include .eps versions in the .ps format.
	* docs/images/Makefile: tools to create .png and .eps
	* docs/images/*.svg: created pictures with Inkscape.
	* .darcs-boring: ignore the generated .eps and .png files

2006-07-24  Brian Warner  <warner@lothar.com>

	* buildbot/master.py (BuildMaster.loadConfig): check for duplicate
	Scheduler names, since they cause setServiceParent to explode
	later.
	* buildbot/test/test_config.py (ConfigTest._testSchedulers_7): test it

2006-07-20  Brian Warner  <warner@lothar.com>

	* buildbot/scripts/sample.cfg: simplify the sample BuildFactory,
	which runs the buildbot unit tests

	* docs/buildbot.texinfo (Index of Useful Classes): add a table of
	classes that are useful in master.cfg

2006-07-15  Brian Warner  <warner@lothar.com>

	* Makefile (some-apidocs): new target to build only some epydocs

	* setup.py: minor comment.. does the classifiers= argument prevent
	the setup.py script from working on python2.2/2.3?

	* buildbot/scripts/sample.cfg: update manhole example, arrange into
	major sections

	* buildbot/twcompat.py: fix minor typo in comments

	* buildbot/manhole.py: move all Manhole-related code out to this
	module. Implement SSH-based manholes (with TwistedConch), and move
	to conch's nifty line-editing syntax-coloring REPL shell instead
	of the boring non-editing monochromatic (and deprecated) old
	'telnet' protocol.
	* buildbot/master.py: remove all Manhole-related code
	(BuildMaster.loadConfig._add): make sure the old manhole is
	removed before we add the new one
	* docs/buildbot.texinfo (Debug options): document new Manhole options
